--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 -->
 
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-<script src="https://raw.githubusercontent.com/serdug/PA-pages/master/app.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/serdug/PA-pages/app.js"></script>
 <!--
 <script src="/scripts/app.js"></script>
 <script>
