next iteration - working

--- a/pa.html
+++ b/pa.html
@@ -71,11 +71,15 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <td>
   <div class="equityReg"></div>
 </td>
-<td>TBA</td>
+<td>
+  <div class="equityAPM"></div>
+</td>
 <td>
   <div class="equityDMY"></div>
 </td>
-<td align="right">100%</td>
+<td align="right">
+  <div class="equityPCT"></div>
+</td>
 </tr>
 
 <tr class="even">
@@ -85,49 +89,87 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <td>
   <div class="tbondsReg"></div>
 </td>
-<td>keep in</td>
-<td>04 February 2019</td>
-<td align="right">100%</td>
+<td>
+  <div class="tbondsAPM"></div>
+</td>
+<td>
+  <div class="tbondsDMY"></div>
+</td>
+<td align="right">
+  <div class="tbondsPCT"></div>
+</td>
 </tr>
 
 <tr class="odd">
 <td>
   <a href="#oilnf_">Oil-NF</a>
 </td>
-<td>LONG</td>
-<td>TBA</td>
-<td>04 February 2019</td>
-<td align="right">100%</td>
+<td>
+  <div class="oilnf_Reg"></div>
+</td>
+<td>
+  <div class="oilnf_APM"></div>
+</td>
+<td>
+  <div class="oilnf_DMY"></div>
+</td>
+<td align="right">
+  <div class="oilnf_PCT"></div>
+</td>
 </tr>
 
 <tr class="even">
 <td>
   <a href="#oilwf_">Oil-WF</a>
 </td>
-<td>-</td>
-<td>OUT OF DATE</td>
-<td>04 January 2019</td>
-<td align="right">100%</td>
+<td>
+  <div class="oilwf_Reg"></div>
+</td>
+<td>
+  <div class="oilwf_APM"></div>
+</td>
+<td>
+  <div class="oilwf_DMY"></div>
+</td>
+<td align="right">
+  <div class="oilwf_PCT"></div>
+</td>
 </tr>
 
 <tr class="odd">
 <td>
   <a href="#volmf_">Volatility-MF</a>
 </td>
-<td>SHORT</td>
-<td>keep in</td>
-<td>04 February 2019</td>
-<td align="right">60%</td>
+<td>
+  <div class="volmf_Reg"></div>
+</td>
+<td>
+  <div class="volmf_APM"></div>
+</td>
+<td>
+  <div class="volmf_DMY"></div>
+</td>
+<td align="right">
+  <div class="volmf_PCT"></div>
+</td>
 </tr>
 
 <tr class="even">
 <td>
   <a href="#volxw2">Volatility-XW2</a>
 </td>
-<td>SHORT</td>
-<td>keep in</td>
-<td>04 February 2019</td>
-<td align="right">100%</td>
+<td>
+  <div class="volxw2Reg"></div>
+</td>
+<td>
+  <div class="volxw2APM"></div>
+</td>
+<td>
+  <div class="volxw2DMY"></div>
+</td>
+<td align="right">
+  <div class="volxw2PCT"></div>
+</td>
 </tr>
 
 </tbody>
